# cel8

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  gulpfile.js  index.html  package-lock.json  package.json
.github/workflows/: gh-pages.yml  main.yml
assets/: main.css
assets/css/: main.css
cmake/: lua.cmake  sokol.cmake
docs/: Gemfile  _config.yml  gulpfile.js  package-lock.json
docs/_data/: about.yml  api.yml  bitwise.yml  callbacks.yml  graphics.yml  memory.yml  system.yml
docs/_includes/: functions.html  header.html  markdown.html  meta.html  section.html
docs/_includes/_markdown/: bitwise.md  graphics.md  memory.md  reference.md
docs/_layouts/: default.html  home.html
docs/_sass/: cel8-style.scss
docs/assets/css/: main.scss
docs/content/: graphics.md  main.css  memory.md  reference.md  structure.md  system.md  welcome.md
docs/mustache/: header.mustache  meta.mustache  page.mustache
examples/: CMakeLists.txt  cel8-sokol.c  clock-sokol.c  crosshair-sokol.c  font-sokol.c  glitch-sokol.c  hello-sokol.c  numbers-sokol.c  palette-sokol.c  snake-sokol.c  sokol.c  sprite-sokol.c  tetris-sokol.c
examples/embed/: font.h  fragment.fs.h  fragment.opengl.fs  fragment.opengl.fs.h  fragment.opengles.fs  opengles_fragment.fs.h  palette.h  vertex.opengl.vs  vertex.opengl.vs.h  vertex.opengles.vs  vertex.opengles.vs.h  vertex.vs
extra/: shell.html
extra/cmake/: sokol.cmake
libs/sokol/: sokol.c  sokol_app.h  sokol_gfx.h  sokol_log.h  update.sh
projects/premake/: premake5.lua
projects/vs2017/: cel8.sln  cel8.vcxproj  cel8.vcxproj.filters
projects/xcode4/cel8.xcodeproj/: project.pbxproj
projects/xcode4/cel8.xcworkspace/: contents.xcworkspacedata
scripts/: build.ts
src/: cel8.h
src/embed/: boot.lua  boot.lua.h  font.h  fragment.fs  vertex.vs.h
src/lib/: cel8-sokol.c
src/lib/sokol/: sokol.c  sokol.m  sokol_app.h  sokol_gl.h  sokol_glue.h
src/platform/: sokol.c
util/: auto.py  sokol.sh
